<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Mesob Store"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_container"
        >
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/profile_picture"
        android:layout_gravity="center"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />



        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biruk Ayele"

            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="biruk52@gmail.com"
            android:padding="1dp"
            android:textSize="12dp"
            android:layout_gravity="center"
            />





    <LinearLayout
        android:id="@+id/edit_profile"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:src="@drawable/user_fill"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editProfile"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/downloads"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/downloadicon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/save_content"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/saved_filled"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_content"

                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/notifiy_offer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/notifiy"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>

        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/profile_container"
        >

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:src="@drawable/send"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/help_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/downloadicon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>