<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/back"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                >

                <ImageView
                    android:id="@+id/close_setting"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/language"
        android:layout_below="@+id/app_bar_layout"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"

/>
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/logout"
        android:layout_below="@+id/lang"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"

        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/lang"
        android:layout_marginTop="2dp"
        android:src="@drawable/setting_line"
        />

</RelativeLayout>