<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line"
            android:layout_below="@id/horizontalScrollView"/>
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scrollbars="none"
            android:background="@color/white"
            android:paddingLeft="10dp">

            <LinearLayout
                android:id="@+id/tabContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <TextView
                    android:id="@+id/game_foryou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forYou"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/base"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginLeft="20dp"
                    />


                <TextView
                    android:id="@+id/game_top_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topChart"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/top_text"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    />

                <TextView
                    android:id="@+id/gameNew_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/top_text"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"/>
                <TextView
                    android:id="@+id/game_categories_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/top_text"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"/>

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/horizontalScrollView"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Horizontal_recyclerGame"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:scrollbars="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:visibility="visible"

                    />



                <!-- Vertical RecyclerView -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Vertical_recyclerGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Horizontal_recyclerGame"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="77dp"
                    android:padding="16dp"
                    android:visibility="gone"/>


                <LinearLayout
                    android:id="@+id/gameHorizontalRecyclerViewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/Horizontal_recyclerGame"
                    android:layout_marginTop="15dp">
                </LinearLayout>
            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>



    </RelativeLayout>


</FrameLayout>